--- a/bower.json
+++ b/bower.json
@@ -17,9 +17,7 @@
   "dependencies": {
     "jquery": "^3.2.0",
     "bootstrap": "^3.3.7",
-    "seiyria-bootstrap-slider": "^9.8.1",
-    "dustjs-linkedin": "^2.7.5",
-    "dustjs": "^0.3.0"
+    "seiyria-bootstrap-slider": "^9.8.1"
   },
   "devDependencies": {
     "dustjs-linkedin": "^2.7.5"
